# screenshot-cleaner

./: .bumpversion.toml  .coverage  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml
.kiro/specs/screenshot-cleaner/: design.md  requirements.md  tasks.md
screenshot_cleaner/: __init__.py
screenshots_cleaner/: cli.py
screenshots_cleaner/utils/: logging.py
tests/: __init__.py  integration_test.py  test_cli.py
tests/core/: test_cleanup.py  test_platform.py  test_scanner.py
tests/utils/: test_logging.py
