[project]
name = "screenshots-cleaner"
version = "0.1.0"
description = "A Python CLI tool for automatically cleaning up old macOS screenshots"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Screenshot Cleaner Contributors" }
]
license = { text = "MIT" }
keywords = ["macos", "screenshots", "cleanup", "cli", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "fire>=0.7.1",
    "rich>=14.2.0",
]

[project.scripts]
screenshots-cleaner = "screenshots_cleaner.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["screenshots_cleaner"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
